arreglo color menu y lista de sectores

--- a/public/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/public/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -86,7 +86,7 @@
                 font-size: 12px;
                 padding: 10px 8px;
                 line-height: 30px;
-                opacity: .7;
+                opacity: 1;
             }
 
             .nav > li > a{
