--- a/public/assets/scss/paper-dashboard/mixins/_vendor-prefixes.scss
+++ b/public/assets/scss/paper-dashboard/mixins/_vendor-prefixes.scss
@@ -189,7 +189,7 @@
         a[data-toggle="collapse"] ~ div > ul > li .sidebar-mini-icon,
         a[data-toggle="collapse"] ~ div > ul > li > a {
           color: $text-color;
-          opacity: .7;
+          opacity: 1;
         }
 
         &:hover:not(.active) > a,
