--- a/public/assets/css/paper-dashboard.css
+++ b/public/assets/css/paper-dashboard.css
@@ -251,7 +251,7 @@ Copyright (c) 2015 Daniel Eden
   border-radius: 3px;
   padding: 11px 22px;
   cursor: pointer;
-  background-color: #66615B;
+  background-color: #000000;
   color: #FFFFFF;
   transition: all 150ms linear; }
   .btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover, .btn.active:focus, .btn.active:hover,
@@ -315,12 +315,12 @@ Copyright (c) 2015 Daniel Eden
   .navbar .navbar-nav > a.btn:active,
   fieldset[disabled]
   .navbar .navbar-nav > a.btn.active {
-    background-color: #66615B;
-    border-color: #66615B; }
+    background-color: #000000;
+    border-color: #000000; }
   .btn.btn-simple,
   .navbar .navbar-nav > a.btn.btn-simple {
-    color: #66615B;
-    border-color: #66615B; }
+    color: #000000;
+    border-color: #000000; }
     .btn.btn-simple:hover, .btn.btn-simple:focus, .btn.btn-simple:active,
     .navbar .navbar-nav > a.btn.btn-simple:hover,
     .navbar .navbar-nav > a.btn.btn-simple:focus,
@@ -331,7 +331,7 @@ Copyright (c) 2015 Daniel Eden
       box-shadow: none; }
   .btn.btn-link,
   .navbar .navbar-nav > a.btn.btn-link {
-    color: #66615B; }
+    color: #000000; }
     .btn.btn-link:hover, .btn.btn-link:focus, .btn.btn-link:active, .btn.btn-link:active:focus,
     .navbar .navbar-nav > a.btn.btn-link:hover,
     .navbar .navbar-nav > a.btn.btn-link:focus,
@@ -608,15 +608,15 @@ Copyright (c) 2015 Daniel Eden
 
 .btn-outline-default {
   background: transparent;
-  border: 2px solid #66615B !important;
-  color: #66615B;
+  border: 2px solid #000000 !important;
+  color: #000000;
   opacity: 1;
   filter: alpha(opacity=100); }
   .btn-outline-default:hover, .btn-outline-default:focus, .btn-outline-default:active, .btn-outline-default:focus:active, .btn-outline-default.active,
   .open > .btn-outline-default.dropdown-toggle {
-    background-color: #66615B !important;
+    background-color: #000000 !important;
     color: rgba(255, 255, 255, 0.8) !important;
-    border-color: #66615B !important; }
+    border-color: #000000 !important; }
     .btn-outline-default:hover .caret, .btn-outline-default:focus .caret, .btn-outline-default:active .caret, .btn-outline-default:focus:active .caret, .btn-outline-default.active .caret,
     .open > .btn-outline-default.dropdown-toggle .caret {
       border-top-color: rgba(255, 255, 255, 0.8) !important; }
@@ -630,7 +630,7 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-outline-default:active,
   fieldset[disabled] .btn-outline-default.active {
     background-color: transparent !important;
-    border-color: #66615B !important; }
+    border-color: #000000 !important; }
 
 .btn-outline-primary {
   background: transparent;
@@ -794,7 +794,7 @@ Copyright (c) 2015 Daniel Eden
 .btn-neutral {
   background-color: #FFFFFF;
   color: #51cbce;
-  color: #66615B; }
+  color: #000000; }
   .btn-neutral:hover, .btn-neutral:focus, .btn-neutral:active, .btn-neutral.active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover,
   .show > .btn-neutral.dropdown-toggle,
   .show > .btn-neutral.dropdown-toggle:focus,
@@ -830,7 +830,7 @@ Copyright (c) 2015 Daniel Eden
     .btn-neutral.btn-success:hover, .btn-neutral.btn-success:focus, .btn-neutral.btn-success:active, .btn-neutral.btn-success:active:focus {
       color: #44c47d !important; }
   .btn-neutral.btn-default {
-    color: #66615B !important; }
+    color: #000000 !important; }
     .btn-neutral.btn-default:hover, .btn-neutral.btn-default:focus, .btn-neutral.btn-default:active, .btn-neutral.btn-default:active:focus {
       color: #403D39 !important; }
   .btn-neutral.active, .btn-neutral:active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover,
@@ -862,11 +862,11 @@ Copyright (c) 2015 Daniel Eden
   .btn-neutral:hover, .btn-neutral:focus {
     color: #403D39; }
   .btn-neutral.btn-border:hover, .btn-neutral.btn-border:focus {
-    color: #66615B; }
+    color: #000000; }
   .btn-neutral.btn-border:active, .btn-neutral.btn-border.active,
   .open > .btn-neutral.btn-border.dropdown-toggle {
     background-color: #FFFFFF;
-    color: #66615B; }
+    color: #000000; }
   .btn-neutral.btn-link:active, .btn-neutral.btn-link.active {
     background-color: transparent; }
 
@@ -877,7 +877,7 @@ Copyright (c) 2015 Daniel Eden
 
 .btn-simple {
   border: 1px solid;
-  border-color: #66615B;
+  border-color: #000000;
   padding: 10px 22px;
   background-color: transparent; }
 
@@ -984,7 +984,7 @@ fieldset[disabled]
   background-color: #FFFFFF;
   border: 1px solid #DDDDDD;
   border-radius: 4px;
-  color: #66615b;
+  color: #000000;
   line-height: normal;
   height: auto;
   font-size: 14px;
@@ -994,7 +994,7 @@ fieldset[disabled]
     border: 1px solid #9A9A9A;
     box-shadow: none;
     outline: 0 !important;
-    color: #66615B; }
+    color: #000000; }
     .form-control:focus + .input-group-append .input-group-text,
     .form-control:focus ~ .input-group-append .input-group-text,
     .form-control:focus + .input-group-prepend .input-group-text,
@@ -1009,7 +1009,7 @@ fieldset[disabled]
     box-shadow: none; }
   .has-success .form-control {
     border: 1px solid #ccc;
-    color: #66615b; }
+    color: #000000; }
     .has-success .form-control.form-control-success {
       padding-right: 2.5em !important; }
   .has-success .form-control:focus {
@@ -1114,7 +1114,7 @@ fieldset[disabled]
 .input-group.has-success .input-group-prepend .input-group-text,
 .input-group.has-success .input-group-append .input-group-text {
   border: 1px solid #ccc;
-  color: #66615b;
+  color: #000000;
   background-color: #FFFFFF;
   border-right: none; }
 
@@ -1204,7 +1204,7 @@ fieldset[disabled]
 .input-group-prepend .input-group-text {
   background-color: transparent;
   border: 1px solid #E3E3E3;
-  color: #66615B;
+  color: #000000;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   transition: color 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out; }
@@ -1284,7 +1284,7 @@ fieldset[disabled]
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
   background-color: #E3E3E3;
-  color: #66615B;
+  color: #000000;
   cursor: not-allowed; }
 
 .input-group-btn .btn {
@@ -1469,12 +1469,12 @@ a.text-gray:focus, a.text-gray:hover {
 
 .blockquote {
   border-left: none;
-  border: 1px solid #66615B;
+  border: 1px solid #000000;
   padding: 20px;
   font-size: 1.1em;
   line-height: 1.8; }
   .blockquote small {
-    color: #66615B;
+    color: #000000;
     font-size: 0.8571em;
     text-transform: uppercase; }
   .blockquote.blockquote-primary {
@@ -1607,8 +1607,8 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   padding: 2px !important; }
 
 .badge.badge-default {
-  border-color: #66615B;
-  background-color: #66615B; }
+  border-color: #000000;
+  background-color: #000000; }
 
 .badge.badge-primary {
   border-color: #51cbce;
@@ -1720,7 +1720,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   top: -5px; }
 
 .form-check-label input[type="checkbox"]:checked + .form-check-sign:before {
-  background-color: #66615B; }
+  background-color: #000000; }
 
 .form-check-radio input[type="radio"] + .form-check-sign:after,
 .form-check-radio input[type="radio"] {
@@ -1755,22 +1755,22 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     .navbar a:not(.btn):not(.dropdown-item) {
       color: #FFFFFF; }
     .navbar a.dropdown-item {
-      color: #66615B; }
+      color: #000000; }
   .navbar.bg-white .input-group .form-control,
   .navbar.bg-white .input-group.no-border .form-control {
-    color: #66615B; }
+    color: #000000; }
     .navbar.bg-white .input-group .form-control::-moz-placeholder,
     .navbar.bg-white .input-group.no-border .form-control::-moz-placeholder {
-      color: #66615B; }
+      color: #000000; }
     .navbar.bg-white .input-group .form-control:-ms-input-placeholder,
     .navbar.bg-white .input-group.no-border .form-control:-ms-input-placeholder {
-      color: #66615B; }
+      color: #000000; }
     .navbar.bg-white .input-group .form-control::-webkit-input-placeholder,
     .navbar.bg-white .input-group.no-border .form-control::-webkit-input-placeholder {
-      color: #66615B; }
+      color: #000000; }
   .navbar.bg-white .input-group-prepend .input-group-text i,
   .navbar.bg-white .input-group-append .input-group-text i {
-    color: #66615B;
+    color: #000000;
     opacity: .5; }
   .navbar .form-group,
   .navbar .input-group {
@@ -1783,7 +1783,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     .navbar .input-group .form-group-addon,
     .navbar .input-group .input-group-prepend .input-group-text,
     .navbar .input-group .input-group-append .input-group-text {
-      color: #66615B; }
+      color: #000000; }
       .navbar .form-group .form-group-addon i,
       .navbar .form-group .input-group-prepend .input-group-text i,
       .navbar .form-group .input-group-append .input-group-text i,
@@ -1793,16 +1793,16 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
         opacity: 1; }
     .navbar .form-group.no-border .form-control,
     .navbar .input-group.no-border .form-control {
-      color: #66615B; }
+      color: #000000; }
       .navbar .form-group.no-border .form-control::-moz-placeholder,
       .navbar .input-group.no-border .form-control::-moz-placeholder {
-        color: #66615B; }
+        color: #000000; }
       .navbar .form-group.no-border .form-control:-ms-input-placeholder,
       .navbar .input-group.no-border .form-control:-ms-input-placeholder {
-        color: #66615B; }
+        color: #000000; }
       .navbar .form-group.no-border .form-control::-webkit-input-placeholder,
       .navbar .input-group.no-border .form-control::-webkit-input-placeholder {
-        color: #66615B; }
+        color: #000000; }
   .navbar p {
     display: inline-block;
     margin: 0;
@@ -1871,7 +1871,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   .navbar .navbar-nav .nav-item .nav-link:not(.btn):hover,
   .navbar .navbar-nav .nav-item .nav-link:not(.btn):active {
     border-radius: 3px;
-    color: #66615B; }
+    color: #000000; }
   .navbar .logo-container {
     width: 27px;
     height: 27px;
@@ -1903,14 +1903,14 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     box-shadow: none;
     border-bottom: 1px solid #ddd; }
     .navbar.navbar-transparent a:not(.dropdown-item):not(.btn) {
-      color: #66615B; }
+      color: #000000; }
       .navbar.navbar-transparent a:not(.dropdown-item):not(.btn).disabled {
         opacity: .5;
-        color: #66615B; }
+        color: #000000; }
     .navbar.navbar-transparent .button-bar {
-      background: #66615B; }
+      background: #000000; }
     .navbar.navbar-transparent .nav-item .nav-link:not(.btn) {
-      color: #66615B; }
+      color: #000000; }
     .navbar.navbar-transparent .nav-item.active .nav-link:not(.btn),
     .navbar.navbar-transparent .nav-item .nav-link:not(.btn):focus,
     .navbar.navbar-transparent .nav-item .nav-link:not(.btn):hover,
@@ -1918,24 +1918,24 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     .navbar.navbar-transparent .nav-item .nav-link:not(.btn):active {
       color: #51cbce; }
   .navbar.bg-white a:not(.dropdown-item):not(.btn) {
-    color: #66615B; }
+    color: #000000; }
     .navbar.bg-white a:not(.dropdown-item):not(.btn).disabled {
       opacity: .5;
-      color: #66615B; }
+      color: #000000; }
   .navbar.bg-white .button-bar {
-    background: #66615B; }
+    background: #000000; }
   .navbar.bg-white .nav-item.active .nav-link:not(.btn),
   .navbar.bg-white .nav-item .nav-link:not(.btn):focus,
   .navbar.bg-white .nav-item .nav-link:not(.btn):hover,
   .navbar.bg-white .nav-item .nav-link:not(.btn):active {
     color: #51bcda; }
   .navbar.bg-white .logo-container {
-    border: 1px solid #66615B; }
+    border: 1px solid #000000; }
   .navbar .navbar-collapse .nav-item a {
     font-size: 14px; }
 
 .bg-default {
-  background-color: #66615B !important; }
+  background-color: #000000 !important; }
 
 .bg-primary {
   background-color: #51cbce !important; }
@@ -2108,7 +2108,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     padding: 30px 30px;
     text-align: center; }
   .dropdown-menu .dropdown-item {
-    color: #66615b;
+    color: #000000;
     font-size: 14px;
     padding: 10px 45px 10px 15px;
     clear: both;
@@ -2137,7 +2137,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     text-decoration: none; }
   .dropdown-menu .dropdown-item:hover,
   .dropdown-menu .dropdown-item:focus {
-    background-color: #66615B; }
+    background-color: #000000; }
   .dropdown-menu.dropdown-primary .dropdown-item:hover,
   .dropdown-menu.dropdown-primary .dropdown-item:focus {
     background-color: #6dd3d6; }
@@ -2239,7 +2239,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     display: none !important; } }
 
 .dropdown-sharing .dropup-item {
-  color: #66615b;
+  color: #000000;
   font-size: 14px; }
   .dropdown-sharing .dropup-item .social-line {
     line-height: 28px;
@@ -2257,7 +2257,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 .dropdown-sharing .dropup-item:focus .social-line,
 .dropdown-sharing .dropup-item:focus .action-line {
   background-color: #FFFFFF;
-  color: #66615b;
+  color: #000000;
   opacity: 1;
   text-decoration: none; }
 
@@ -2282,7 +2282,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .dropdown-actions li:hover a,
 .dropdown-actions li:focus a {
-  color: #66615b;
+  color: #000000;
   opacity: 1;
   text-decoration: none; }
 
@@ -2320,7 +2320,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 .dropdown-notification .dropdown-notification-list .notification-item {
   border-bottom: 1px solid #F1EAE0;
   font-size: 16px;
-  color: #66615b; }
+  color: #000000; }
   .dropdown-notification .dropdown-notification-list .notification-item .notification-text {
     padding-left: 40px;
     position: relative;
@@ -2351,7 +2351,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   .dropdown-notification .dropdown-notification-list .notification-item:hover {
     text-decoration: none; }
     .dropdown-notification .dropdown-notification-list .notification-item:hover .notification-text {
-      color: #66615b;
+      color: #000000;
       background-color: #F0EFEB !important; }
     .dropdown-notification .dropdown-notification-list .notification-item:hover .read-notification {
       opacity: 1 !important; }
@@ -3065,7 +3065,7 @@ License - nucleoapp.com/license/
       font-size: 12px;
       padding: 10px 8px;
       line-height: 30px;
-      opacity: .7; }
+      opacity: 1; }
     .sidebar .nav li .nav > li > a,
     .off-canvas-sidebar .nav li .nav > li > a {
       padding: 5px 8px; }
@@ -3192,8 +3192,8 @@ License - nucleoapp.com/license/
     left: 0; }
   .sidebar:after,
   .off-canvas-sidebar:after {
-    background: #66615B;
-    background: linear-gradient(#66615B 0%, #000 80%);
+    background: #000000;
+    background: linear-gradient(#000000 0%, #000 80%);
     z-index: 3; }
   .sidebar[data-color="white"]:after,
   .off-canvas-sidebar[data-color="white"]:after {
@@ -3210,8 +3210,8 @@ License - nucleoapp.com/license/
   .off-canvas-sidebar[data-color="white"] .nav li a[data-toggle="collapse"] i,
   .off-canvas-sidebar[data-color="white"] .nav li a[data-toggle="collapse"] ~ div > ul > li .sidebar-mini-icon,
   .off-canvas-sidebar[data-color="white"] .nav li a[data-toggle="collapse"] ~ div > ul > li > a {
-    color: #66615B;
-    opacity: .7; }
+    color: #000000;
+    opacity: 1; }
   .sidebar[data-color="white"] .nav li:hover:not(.active) > a,
   .sidebar[data-color="white"] .nav li:focus:not(.active) > a,
   .off-canvas-sidebar[data-color="white"] .nav li:hover:not(.active) > a,
@@ -3219,10 +3219,10 @@ License - nucleoapp.com/license/
     opacity: 1; }
   .sidebar[data-color="white"] .logo .simple-text,
   .off-canvas-sidebar[data-color="white"] .logo .simple-text {
-    color: #66615B; }
+    color: #000000; }
   .sidebar[data-color="white"] .logo:after,
   .off-canvas-sidebar[data-color="white"] .logo:after {
-    background-color: #66615B;
+    background-color: #000000;
     opacity: .4; }
   .sidebar[data-color="white"] .user .info a span,
   .sidebar[data-color="white"] .user .nav .sidebar-mini-icon,
@@ -3230,10 +3230,10 @@ License - nucleoapp.com/license/
   .off-canvas-sidebar[data-color="white"] .user .info a span,
   .off-canvas-sidebar[data-color="white"] .user .nav .sidebar-mini-icon,
   .off-canvas-sidebar[data-color="white"] .user .nav .sidebar-normal {
-    color: #66615B !important; }
+    color: #000000 !important; }
   .sidebar[data-color="white"] .user:after,
   .off-canvas-sidebar[data-color="white"] .user:after {
-    background-color: #66615B;
+    background-color: #000000;
     opacity: .4; }
   .sidebar[data-color="black"]:after,
   .off-canvas-sidebar[data-color="black"]:after {
@@ -3320,7 +3320,7 @@ License - nucleoapp.com/license/
   .off-canvas-sidebar[data-active-color="default"] .nav li.active > a[data-toggle="collapse"] i,
   .off-canvas-sidebar[data-active-color="default"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active .sidebar-mini-icon,
   .off-canvas-sidebar[data-active-color="default"] .nav li.active > a[data-toggle="collapse"] ~ div > ul > li.active > a {
-    color: #66615B;
+    color: #000000;
     opacity: 1; }
 
 .visible-on-sidebar-regular {
@@ -3538,7 +3538,7 @@ License - nucleoapp.com/license/
       position: relative;
       left: -10px;
       font-size: 0.7142em;
-      color: #66615B; }
+      color: #000000; }
       .fixed-plugin .adjustments-line .togglebutton .label-switch.label-right {
         left: 10px; }
     .fixed-plugin .adjustments-line .togglebutton .toggle {
@@ -3694,7 +3694,7 @@ License - nucleoapp.com/license/
       margin-right: 5px;
       position: relative;
       top: 0px;
-      color: #66615B; }
+      color: #000000; }
     .card .card-footer .btn {
       margin: 0; }
   .card.card-plain {
@@ -3864,14 +3864,14 @@ License - nucleoapp.com/license/
     color: #FFFFFF; }
   .navbar.bg-white .dropdown-menu .dropdown-item:focus,
   .navbar.bg-white .dropdown-menu .dropdown-item:hover {
-    color: #66615B; }
+    color: #000000; }
   .navbar .navbar-toggler-bar {
     display: block;
     position: relative;
     width: 22px;
     height: 1px;
     border-radius: 1px;
-    background: #66615B; }
+    background: #000000; }
     .navbar .navbar-toggler-bar + .navbar-toggler-bar {
       margin-top: 7px; }
     .navbar .navbar-toggler-bar + .navbar-toggler-bar.navbar-kebab {
@@ -3880,7 +3880,7 @@ License - nucleoapp.com/license/
       width: 17px;
       transition: width .2s linear; }
   .navbar.bg-white:not(.navbar-transparent) .navbar-toggler-bar {
-    background-color: #66615B; }
+    background-color: #000000; }
   .navbar .toggled .navbar-toggler-bar {
     width: 24px; }
     .navbar .toggled .navbar-toggler-bar + .navbar-toggler-bar {
