--- a/public/assets/scss/paper-dashboard/_variables.scss
+++ b/public/assets/scss/paper-dashboard/_variables.scss
@@ -2,7 +2,7 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-$font-color:                 #66615b !default;
+$font-color:                 #000000 !default;
 $fill-font-color:            rgba(255, 255, 255, 0.8);
 $font-family-sans-serif:     'Montserrat', "Helvetica", Arial, sans-serif;
 $sans-serif-family:          'Montserrat', 'Helvetica Neue',  Arial, sans-serif;
@@ -59,8 +59,8 @@ $transparent-bg:             transparent !default;
 
 $placeholder-gray:           rgba(210, 210, 210, 1)  !default;
 
-$default-color:              #66615B !default;
-$default-bg:                 #66615B !default;
+$default-color:              #000000 !default;
+$default-bg:                 #000000 !default;
 $default-states-color:       #403D39 !default;
 
 $smoke-bg:                   #F5F5F5 !default;
